--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mategotchi </title>
     <link rel="stylesheet" href="../public/css/general_styles.css">
+    <link rel="stylesheet" href="../public/css/index_styles.css">
     <link rel="stylesheet" href="../node_modules/nes.css/css/nes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,8 @@
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <!-- core style only -->
     <link href="https://unpkg.com/nes.css/css/nes-core.min.css" rel="stylesheet" />
-    </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>    
+</head>
 
 <body>
 
@@ -54,12 +56,12 @@
                 <div class="avatar-gif" id="avatar1">
                     <img src="../public/img/rabbit-gif.gif" alt="">
                 </div>
-                <div class="mensaje-bienvenida info-div nes-balloon from-left" id="bienvenida1">
+                <div class="mensaje-bienvenida info-div nes-container is-rounded" id="bienvenida1">
                     <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
                 </div>
             </div>
             <div class="info">
-                <div class="mensaje-bienvenida info-div nes-balloon from-right" id="bienvenida2">
+                <div class="mensaje-bienvenida info-div nes-container is-rounded" id="bienvenida2">
                     <p>¡Aprende junto a mi y muchas mascotas más!</p>
                 </div>
                 <div class="avatar-gif" id="avatar2">
