--- a/views/juego5.ejs
+++ b/views/juego5.ejs
@@ -48,19 +48,18 @@
     </header>
 
     <main class="flex-section center-flex">
-        <h1 class="titleh1">Juego 3</h1>
+        <h1 class="titleh1">Juego 5</h1>
         <section class="zona-juego">
             <div class="fondo"> 
-                <img id="ejercicio2" src="../public/img/img_juegos/bienvenidanivel3.png" class="nivel1Bienvenida">
+                <img id="ejercicio1" src="../public/img/img_juegos/bienvenidanivel5.png" class="nivel1Bienvenida">
             </div>
             <div class="boton" id="boton1">
                 <button onclick="iniciar(0)" type="button"> <img src="../public/img/img_juegos/aceptar.png" height ="80" width="100" /></button>
             </div>
-            <div class="respuestaNivel3" id="resultado" style="display: none;">
-                <form name="myForm" action="" onsubmit="validarRespuesta()" method="post">
-                    <input  class="Entradarespuesta" type="text" name="fname">
-                    <button class="boton2" onsubmit="validarRespuesta()" type="submit"> <img src="../public/img/img_juegos/aceptar.png" height ="40" width="50" /></button>
-                  </form>
+            <div class="respuesta" id="resultado" style="display: none;">
+                <button onclick="validarRespuesta(1)" type="button" id="botonR1"> <img src="../public/img/img_juegos/suma.png" height ="40" width="50" /></button>
+                <button onclick="validarRespuesta(2)" type="button" id="botonR2"> <img src="../public/img/img_juegos/resta.png" height ="40" width="50" /></button>
+                <button onclick="validarRespuesta(3)" type="button" id="botonR3"> <img src="../public/img/img_juegos/equis.png" height ="40" width="50" /></button>
             </div>
         </section>
     </main>
