--- a/views/juego1.ejs
+++ b/views/juego1.ejs
@@ -47,10 +47,10 @@
         </div>
     </header>
 
-    <main class="flex-section center-flex">
+    <main>
         <h1 class="titleh1">Juego 1</h1>
         <section class="zona-juego">
-            <div class="fondo"> 
+            <div class="fondo nes-container"> 
                 <img id="ejercicio1" src="../public/img/img_juegos/nivel1Bienvenida.png" class="nivel1Bienvenida">
             </div>
             <div class="boton" id="boton1">
